--- a/app/static/app/assets/css/main.css
+++ b/app/static/app/assets/css/main.css
@@ -2847,9 +2847,59 @@ section,
   background-color: color-mix(in srgb, var(--surface-color), transparent 70%);
 }
 
-/*--------------------------------------------------------------
-# Starter Section Section
---------------------------------------------------------------*/
-.starter-section {
-  /* Add your styles here */
+.starter-section {}
+
+.switch {
+  position: relative;
+  width: 50px;
+  height: 26px;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  inset: 0;
+  background: #303A40;
+  border-radius: 34px;
+  transition: .3s;
+}
+
+.slider::before {
+  content: "";
+  position: absolute;
+  width: 22px;
+  height: 22px;
+  left: 2px;
+  bottom: 2px;
+  background: white;
+  border-radius: 50%;
+  transition: .3s;
+}
+
+input:checked + .slider {
+  background: #0d6efd;
+}
+
+input:checked + .slider::before {
+  transform: translateX(24px);
+}
+
+.skill-icon {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: var(--accent-color); /* ili #0d6efd */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto 20px auto;
+}
+
+.skill-icon i {
+  font-size: 50px;
+  color: #fff;
 }
