--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,16 +1,28 @@
-<!-- load css/bootstrap link -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<!-- endlink -->
+{% load static %}
 
-<!-- navbar -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+/>
+
+<link rel="icon" type="image/png" href="{% static 'app/assets/img/profile/croped_profile.png' %}">
+
 <header id="header" class="header d-flex align-items-center light-background sticky-top">
       <div class="container position-relative d-flex align-items-center justify-content-between">
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="{% url 'index' %}" class="active">Home</a></li>
-            <li><a href="{% url 'about' %}">About</a></li>
-            <li><a href="{% url 'contact' %}">Contact</a></li>
+            <li>
+              <a href="{% url 'index' %}" class="{% if request.resolver_match.url_name == 'index' %}active{% endif %}">Home</a>
+            </li>
+            <li>
+              <a href="{% url 'about' %}" class="{% if request.resolver_match.url_name == 'about' %}active{% endif %}">About</a>
+            </li>
+            <li>
+              <a href="{% url 'contact' %}" class="{% if request.resolver_match.url_name == 'contact' %}active{% endif %}">Contact</a>
+            </li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -20,13 +32,20 @@
           <a href="https://www.linkedin.com/in/dusan-rosic-896417287/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
 
+        <!-- Make Switch Screen View Button -->
+        <div class="mode-switch">
+          <label class="switch">
+            <input type="checkbox" id="modeSwitch">
+            <span class="slider"></span>
+          </label>
+        </div>
+
       </div>
     </header>
 
 {% block content %}
 {% endblock %}
 
-<!-- Footer -->
 <footer id="footer" class="footer">
   <div class="container">
     <div class="copyright text-center ">
@@ -39,4 +58,3 @@
     </div>
   </div>
 </footer>
-<!-- Footer -->
