--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -8,27 +8,23 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - FolioOne Bootstrap Template</title>
+  <title>Dušan Rosić</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-  <!-- Favicons -->
   <link href="{% static 'app/assets/img/favicon.png' %}" rel="icon">
   <link href="{% static 'app/assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="{% static 'app/assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'app/assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
   <link href="{% static 'app/assets/vendor/aos/aos.css' %}" rel="stylesheet">
   <link href="{% static 'app/assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
   <link href="{% static 'app/assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
 
-  <!-- Main CSS File -->
   <link href="{% static 'app/assets/css/main.css' %}" rel="stylesheet">
 </head>
 
@@ -36,14 +32,12 @@
 
   <main class="main">
 
-    <!-- Contact Section -->
     <section id="contact" class="contact section">
 
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
         <p>Drop me a message, I'd love to hear from you.</p>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -89,7 +83,11 @@
                 </div>
                 <div class="content">
                   <h4>Email Address</h4>
-                  <p>dusanrosic25.06.1997@gmail.com</p>
+                  <p>
+                    <a href="mailto:dusanrosic25.06.1997@gmail.com">
+                      dusanrosic25.06.1997@gmail.com
+                    </a>
+                  </p>
                 </div>
               </div>
             </div>
@@ -98,7 +96,7 @@
           <div class="col-12 col-md-6 col-lg-7">
             <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
               <h3>Get In Touch</h3>
-              <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis.</p>
+              <p>Get in touch today, we are here to help.</p>
 
               <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
                 <div class="row gy-4">
@@ -124,7 +122,7 @@
                     <div class="error-message"></div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                    <button type="submit" class="btn">Send Message</button>
+                    <button type="submit" class="btn btn-secondary">Send Message</button>
                   </div>
 
                 </div>
@@ -137,17 +135,14 @@
 
       </div>
 
-    </section><!-- /Contact Section -->
+    </section>
 
   </main>
 
-  <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
   <script src="{% static 'app/assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'app/assets/vendor/php-email-form/validate.js' %}"></script>
   <script src="{% static 'app/assets/vendor/aos/aos.js' %}"></script>
@@ -159,7 +154,6 @@
   <script src="{% static 'app/assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
   <script src="{% static 'app/assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
 
-  <!-- Main JS File -->
   <script src="{% static 'app/assets/js/main.js' %}"></script>
 
 </body>
