--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -57,7 +57,7 @@
 
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="{% static 'app/assets/img/profile/croped_profile.png' %}" alt="Dušan Rosić" class="img-fluid profile-photo">
+              <img src="{% static 'app/assets/img/profile/profile.png' %}" alt="Dušan Rosić" class="img-fluid profile-photo">
             </figure>
           </div>
         </div>
@@ -70,10 +70,73 @@
 
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
+        <h3>Personal Favorite - Native Android Development</h3>
       </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row g-4 skills-animation">
+
+          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="skill-box">
+              <div class="skill-icon">
+                <img src="{% static 'app/assets/img/icons8-kotlin-50.png' %}" style="filter: brightness(0) invert(1);">
+              </div>
+              <h3>Kotlin</h3>
+              <p>
+                Prefered language by Google for Native Android Development. 
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="skill-box">
+              <div class="skill-icon">
+                <i class="fa-brands fa-android"></i>
+              </div>
+              <h3>Android SDK</h3>
+              <p>
+                Build Android apps efficiently with Android SDK.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="skill-box">
+              <div class="skill-icon">
+                <!-- Jetpack Compose SVG ikonica -->
+                <svg role="img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg" height="48" width="48">
+                  <title>Jetpack Compose</title>
+                  <path d="M24.27 0.006a5.154 5.154 0 0 0 -2.84 0.688L5.1 10.12a5.154 5.154 0 0 0 -1.906 1.934l7.914 4.34a3.53 3.53 0 0 1 1.206 -1.176l9.902 -5.72a3.522 3.522 0 0 1 3.52 0l9.902 5.72a3.506 3.506 0 0 1 1.052 0.92l7.842 -4.53a5.154 5.154 0 0 0 -1.632 -1.488L26.582 0.694a5.154 5.154 0 0 0 -2.304 -0.68Zm-0.29 9.824a2.72 2.72 0 0 0 -1.36 0.364L12.72 15.906a2.69 2.69 0 0 0 -0.908 0.87l3.84 2.11a2.1 2.1 0 0 1 0.62 -0.55l6.68 -3.856a2.108 2.108 0 0 1 2.102 0l6.672 3.856a2.132 2.132 0 0 1 0.476 0.398l0.036 -0.02 -0.004 -0.004 3.754 -2.16a2.706 2.706 0 0 0 -0.746 -0.644l-9.9 -5.72a2.714 2.714 0 0 0 -1.36 -0.356Zm20.864 2.298 -7.84 4.52a3.514 3.514 0 0 1 0.4 1.624v11.43c0 1.254 -0.664 2.42 -1.76 3.056l-9.9 5.72a3.522 3.522 0 0 1 -1.28 0.428v9.048a5.154 5.154 0 0 0 2.118 -0.626l16.324 -9.426a5.154 5.154 0 0 0 2.578 -4.46V14.594a5.154 5.154 0 0 0 -0.636 -2.456Zm-41.874 0.476a5.154 5.154 0 0 0 -0.454 1.98v18.86c0 1.836 0.982 3.534 2.586 4.458l16.324 9.426a5.14 5.14 0 0 0 2.45 0.672v-9.062a3.522 3.522 0 0 1 -1.666 -0.47L12.312 32.76a3.53 3.53 0 0 1 -1.754 -3.056V18.272a3.552 3.552 0 0 1 0.262 -1.352Zm33.34 4.446 -3.78 2.184a2.116 2.116 0 0 1 0.248 0.92v7.712c0 0.756 -0.4 1.44 -1.052 1.814l-6.672 3.86a2.08 2.08 0 0 1 -0.59 0.214v4.34c0.304 -0.054 0.608 -0.156 0.88 -0.314l9.898 -5.718a2.72 2.72 0 0 0 1.36 -2.36V18.272a2.72 2.72 0 0 0 -0.294 -1.214Zm-24.774 0.26a2.72 2.72 0 0 0 -0.176 0.962v11.43a2.72 2.72 0 0 0 1.36 2.36l9.9 5.72c0.388 0.224 0.824 0.332 1.254 0.354v-4.348a2.108 2.108 0 0 1 -0.92 -0.246L16.28 29.686a2.108 2.108 0 0 1 -1.064 -1.816v-7.706a1.98 1.98 0 0 1 0.154 -0.76l-0.068 -0.026z" fill="#ffffff" stroke-width="2"></path>
+                </svg>
+              </div>
+              <h3>Jetpack Compose</h3>
+              <p>
+                Jetpack Compose: Simple, modern Android UI.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+            <div class="skill-box">
+              <div class="skill-icon">
+                <img src="{% static 'app/assets/img/icons8-firebase-48.png' %}" style="filter: brightness(0) invert(1);">
+              </div>
+              <h3>Firebase</h3>
+              <p>
+                Firebase provides backend services to power your apps.
+              </p>
+            </div>
+          </div>
+
+          <div>
+            <br/>
+            <br/>
+            <br/>
+          </div>
+
+          <div class="container section-title" data-aos="fade-up">
+            <h3>Other Skills & Technologies</h3>
+          </div>
           
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
             <div class="skill-box">
@@ -95,18 +158,6 @@
               <h3>JavaScript</h3>
               <p>
                 A little bit of JavaScript never really hurts.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
-            <div class="skill-box">
-              <div class="skill-icon">
-                <img src="{% static 'app/assets/img/icons8-kotlin-50.png' %}" style="filter: brightness(0) invert(1);">
-              </div>
-              <h3>Kotlin</h3>
-              <p>
-                Prefered language by Google for Native Android Development. 
               </p>
             </div>
           </div>
@@ -188,49 +239,9 @@
               <div class="skill-icon">
                 <i class="fa-solid fa-database"></i>
               </div>
-              <h3>SQL</h3>
+              <h3>RoomDB, SQL & Firestore</h3>
               <p>
                 Designing efficient and reliable databases for applications.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
-            <div class="skill-box">
-              <div class="skill-icon">
-                <i class="fa-brands fa-android"></i>
-              </div>
-              <h3>Android SDK</h3>
-              <p>
-                Build Android apps efficiently with Android SDK.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
-            <div class="skill-box">
-              <div class="skill-icon">
-                <!-- Jetpack Compose SVG ikonica -->
-                <svg role="img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg" height="48" width="48">
-                  <title>Jetpack Compose</title>
-                  <path d="M24.27 0.006a5.154 5.154 0 0 0 -2.84 0.688L5.1 10.12a5.154 5.154 0 0 0 -1.906 1.934l7.914 4.34a3.53 3.53 0 0 1 1.206 -1.176l9.902 -5.72a3.522 3.522 0 0 1 3.52 0l9.902 5.72a3.506 3.506 0 0 1 1.052 0.92l7.842 -4.53a5.154 5.154 0 0 0 -1.632 -1.488L26.582 0.694a5.154 5.154 0 0 0 -2.304 -0.68Zm-0.29 9.824a2.72 2.72 0 0 0 -1.36 0.364L12.72 15.906a2.69 2.69 0 0 0 -0.908 0.87l3.84 2.11a2.1 2.1 0 0 1 0.62 -0.55l6.68 -3.856a2.108 2.108 0 0 1 2.102 0l6.672 3.856a2.132 2.132 0 0 1 0.476 0.398l0.036 -0.02 -0.004 -0.004 3.754 -2.16a2.706 2.706 0 0 0 -0.746 -0.644l-9.9 -5.72a2.714 2.714 0 0 0 -1.36 -0.356Zm20.864 2.298 -7.84 4.52a3.514 3.514 0 0 1 0.4 1.624v11.43c0 1.254 -0.664 2.42 -1.76 3.056l-9.9 5.72a3.522 3.522 0 0 1 -1.28 0.428v9.048a5.154 5.154 0 0 0 2.118 -0.626l16.324 -9.426a5.154 5.154 0 0 0 2.578 -4.46V14.594a5.154 5.154 0 0 0 -0.636 -2.456Zm-41.874 0.476a5.154 5.154 0 0 0 -0.454 1.98v18.86c0 1.836 0.982 3.534 2.586 4.458l16.324 9.426a5.14 5.14 0 0 0 2.45 0.672v-9.062a3.522 3.522 0 0 1 -1.666 -0.47L12.312 32.76a3.53 3.53 0 0 1 -1.754 -3.056V18.272a3.552 3.552 0 0 1 0.262 -1.352Zm33.34 4.446 -3.78 2.184a2.116 2.116 0 0 1 0.248 0.92v7.712c0 0.756 -0.4 1.44 -1.052 1.814l-6.672 3.86a2.08 2.08 0 0 1 -0.59 0.214v4.34c0.304 -0.054 0.608 -0.156 0.88 -0.314l9.898 -5.718a2.72 2.72 0 0 0 1.36 -2.36V18.272a2.72 2.72 0 0 0 -0.294 -1.214Zm-24.774 0.26a2.72 2.72 0 0 0 -0.176 0.962v11.43a2.72 2.72 0 0 0 1.36 2.36l9.9 5.72c0.388 0.224 0.824 0.332 1.254 0.354v-4.348a2.108 2.108 0 0 1 -0.92 -0.246L16.28 29.686a2.108 2.108 0 0 1 -1.064 -1.816v-7.706a1.98 1.98 0 0 1 0.154 -0.76l-0.068 -0.026z" fill="#ffffff" stroke-width="2"></path>
-                </svg>
-              </div>
-              <h3>Jetpack Compose</h3>
-              <p>
-                Jetpack Compose: Simple, modern Android UI.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
-            <div class="skill-box">
-              <div class="skill-icon">
-                <img src="{% static 'app/assets/img/icons8-firebase-48.png' %}" style="filter: brightness(0) invert(1);">
-              </div>
-              <h3>Firebase</h3>
-              <p>
-                Firebase provides backend services to power your apps.
               </p>
             </div>
           </div>
@@ -265,7 +276,7 @@
                 &#8226; &#8226; &#8226;
               </div>
               <h3>And Many More...</h3>
-              <p>Pygame, Godot, Flet, Android Studio, Sublime, ChatGPT, Claude, Cursor...</p>
+              <p>Godot, Pygame, Flet, Android Studio, Sublime, ChatGPT, Claude, Cursor...</p>
             </div>
           </div>
 
