--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -34,108 +34,105 @@
 
     <section id="contact" class="contact section">
 
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Drop me a message, I'd love to hear from you.</p>
+  <div class="container" data-aos="fade-up">
+    <div class="section-title">
+      <h2>Contact</h2>
+      <p>Drop me a message, I'd love to hear from you.</p>
+    </div>
+
+    <div class="row g-4 g-lg-5 mt-4">
+
+      <!-- Contact Info -->
+      <div class="col-12 col-md-6 col-lg-5">
+        <div class="info-box" data-aos="fade-up" data-aos-delay="200">
+          <h3>Contact Info</h3>
+          <br/>
+
+          <div class="info-item" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon-box"><i class="bi bi-github"></i></div>
+            <div class="content">
+              <h4>Github</h4>
+              <p><a href="https://github.com/dusanrsc">@dusanrsc</a></p>
+            </div>
+          </div>
+
+          <div class="info-item" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon-box"><i class="bi bi-instagram"></i></div>
+            <div class="content">
+              <h4>Instagram</h4>
+              <p><a href="https://www.instagram.com/dusanrsc/">@dusanrsc</a></p>
+            </div>
+          </div>
+
+          <div class="info-item" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon-box"><i class="bi bi-linkedin"></i></div>
+            <div class="content">
+              <h4>Linkedin</h4>
+              <p><a href="https://www.linkedin.com/in/dusan-rosic-896417287/">Dušan Rosić</a></p>
+            </div>
+          </div>
+
+          <div class="info-item" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon-box"><i class="bi bi-envelope"></i></div>
+            <div class="content">
+              <h4>Email Address</h4>
+              <p><a href="mailto:dusanrosic25.06.1997@gmail.com">dusanrosic25.06.1997@gmail.com</a></p>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <!-- Contact Form -->
+      <div class="col-12 col-md-6 col-lg-7">
+        <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
+          <h3>Get In Touch</h3>
+          <p>Get in touch today, we are here to help.</p>
 
-        <div class="row g-4 g-lg-5">
-          <div class="col-12 col-md-6 col-lg-5">
-            <div class="info-box" data-aos="fade-up" data-aos-delay="200">
-              <h3>Contact Info</h3>
-              <br/>
+          <form action="{% url 'contact' %}" method="post">
+            {% csrf_token %}
 
-              <div class="info-item" data-aos="fade-up" data-aos-delay="400">
-                <div class="icon-box">
-                  <i class="bi bi-github"></i>
-                </div>
-                <div class="content">
-                  <h4>Github</h4>
-                  <p><a href="https://github.com/dusanrsc">@dusanrsc</a></p>
-                </div>
+            <div class="row gy-4">
+
+              <div class="col-md-6">
+                <input type="text" name="name" class="form-control" placeholder="Your Name" required>
               </div>
 
-              <div class="info-item" data-aos="fade-up" data-aos-delay="400">
-                <div class="icon-box">
-                  <i class="bi bi-instagram"></i>
-                </div>
-                <div class="content">
-                  <h4>Instagram</h4>
-                  <p><a href="https://www.instagram.com/dusanrsc/">@dusanrsc</a></p>
-                </div>
+              <div class="col-md-6">
+                <input type="email" name="email" class="form-control" placeholder="Your Email" required>
               </div>
 
-              <div class="info-item" data-aos="fade-up" data-aos-delay="400">
-                <div class="icon-box">
-                  <i class="bi bi-linkedin"></i>
-                </div>
-                <div class="content">
-                  <h4>Linkedin</h4>
-                  <p><a href="https://www.linkedin.com/in/dusan-rosic-896417287/">Dušan Rosić</a></p>
-                </div>
+              <div class="col-12">
+                <input type="text" name="subject" class="form-control" placeholder="Subject" required>
               </div>
 
-              <div class="info-item" data-aos="fade-up" data-aos-delay="500">
-                <div class="icon-box">
-                  <i class="bi bi-envelope"></i>
-                </div>
-                <div class="content">
-                  <h4>Email Address</h4>
-                  <p>
-                    <a href="mailto:dusanrosic25.06.1997@gmail.com">
-                      dusanrosic25.06.1997@gmail.com
-                    </a>
-                  </p>
-                </div>
+              <div class="col-12">
+                <textarea name="message" class="form-control" rows="6" placeholder="Message" required></textarea>
               </div>
-            </div>
-          </div>
 
-          <div class="col-12 col-md-6 col-lg-7">
-            <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
-              <h3>Get In Touch</h3>
-              <p>Get in touch today, we are here to help.</p>
-
-              <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-                <div class="row gy-4">
-
-                  <div class="col-md-6">
-                    <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                  </div>
-
-                  <div class="col-md-6 ">
-                    <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                  </div>
-
-                  <div class="col-12">
-                    <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                  </div>
-
-                  <div class="col-12">
-                    <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                  </div>
-
-                  <div class="col-12 text-center">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                    <button type="submit" class="btn btn-secondary">Send Message</button>
-                  </div>
-
-                </div>
-              </form>
+              <div class="col-12 text-center">
+                <button type="submit" class="btn btn-secondary">Send Message</button>
+              </div>
 
             </div>
-          </div>
+
+            {% if messages %}
+              {% for message in messages %}
+                <br/>
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show d-flex justify-content-between align-items-center" role="alert">
+                  <span>{{ message }}</span>
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+              {% endfor %}
+            {% endif %}
+
+          </form>
 
         </div>
-
       </div>
+    </div>
+  </div>
 
-    </section>
+</section>
 
   </main>
 
@@ -144,7 +141,6 @@
   <div id="preloader"></div>
 
   <script src="{% static 'app/assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static 'app/assets/vendor/php-email-form/validate.js' %}"></script>
   <script src="{% static 'app/assets/vendor/aos/aos.js' %}"></script>
   <script src="{% static 'app/assets/vendor/typed.js/typed.umd.js' %}"></script>
   <script src="{% static 'app/assets/vendor/waypoints/noframework.waypoints.js' %}"></script>
