--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -43,13 +43,17 @@
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Hello there</span>
-              <h2 class="headline">Hi, I'm Dušan Rosić – a dedicated developer focused on building clean, scalable digital solutions that blend functionality with design.</h2>
+              <h2 class="headline">I'm Dušan Rosić – a dedicated developer focused on building clean, scalable digital solutions that blend functionality with design.</h2>
 
               <h2><strong>I’ve been coding since before AI became a buzzword.</strong></h2>
 
               <div class="cta-group">
                 <a href="#" class="link-underline">
-                  Download Resume <i class="bi bi-download"></i>
+                  Native Android Resume <i class="bi bi-download"></i>
+                </a>
+                &nbsp;&nbsp;&nbsp;
+                <a href="#" class="link-underline" data-bs-toggle="modal" data-bs-target="#comingSoonModal">
+                  Python Resume <i class="bi bi-download"></i> (Coming Soon)
                 </a>
               </div>
             </div>
@@ -57,7 +61,7 @@
 
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="{% static 'app/assets/img/profile/profile.png' %}" alt="Dušan Rosić" class="img-fluid profile-photo">
+              <img src="{% static 'app/assets/img/profile/profile.png' %}" style="width:75%;" alt="Dušan Rosić" class="img-fluid profile-photo">
             </figure>
           </div>
         </div>
