--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,7 @@
           </label>
         </div> -->
 
-        {% now "d-M-Y H:i" %}
+        {% now "d/m/Y H:i" %}
 
       </div>
     </header>
