--- a/app/static/app/assets/css/main.css
+++ b/app/static/app/assets/css/main.css
@@ -2913,3 +2913,13 @@ input:checked + .slider::before {
     border-radius: 5px;
     display: inline-block;
 }
+
+#matrix-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  background: black;
+}
