--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -48,14 +48,13 @@
               <h2><strong>I’ve been coding since before AI became a buzzword.</strong></h2>
 
               <div class="cta-group">
-                <a href="#" class="link-underline">
-                  Native Android Resume <i class="bi bi-download"></i>
-                </a>
+                <a href="{% static '\app\assets\resumes\NativeAndroidResume.pdf' %}" class="download link-underline" download>Native Android Resume<i class="bi bi-download"></i></a>
+
                 &nbsp;&nbsp;&nbsp;
-                <a href="#" class="link-underline" data-bs-toggle="modal" data-bs-target="#comingSoonModal">
-                  Python Resume <i class="bi bi-download"></i> (Coming Soon)
-                </a>
+
+                <!-- <a href="{% static '\app\assets\resumes\Python_Resume.txt' %}" class="download link-underline" download>Python Resume <i class="bi bi-download"></i> (Coming Soon)</a> -->
               </div>
+
             </div>
           </div>
 
@@ -288,7 +287,6 @@
       </div>
 
     </section>
-
   </main>
 
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
