--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
 
     <div class="header-social-links">
       <a href="https://www.instagram.com/dusanrsc/" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/dusan-rosic-896417287/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/du%C5%A1an-rosi%C4%87-896417287/" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <!--  Make Switch Screen View Button
@@ -56,7 +56,7 @@
     </div>
     <div class="social-links d-flex justify-content-center">
       <a href="https://www.instagram.com/dusanrsc/"><i class="bi bi-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/dusan-rosic-896417287/"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/du%C5%A1an-rosi%C4%87-896417287/"><i class="bi bi-linkedin"></i></a>
     </div>
   </div>
 </footer>
