--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -68,7 +68,7 @@
             <div class="icon-box"><i class="bi bi-linkedin"></i></div>
             <div class="content">
               <h4>Linkedin</h4>
-              <p><a href="https://www.linkedin.com/in/dusan-rosic-896417287/">Dušan Rosić</a></p>
+              <p><a href="https://www.linkedin.com/in/du%C5%A1an-rosi%C4%87-896417287/">Dušan Rosić</a></p>
             </div>
           </div>
 
